--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
-        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
@@ -21,13 +20,15 @@
         "@fullcalendar/daygrid": "^6.1.15",
         "@fullcalendar/interaction": "^6.1.0",
         "@fullcalendar/timegrid": "^6.1.15",
-        "bootstrap": "^5.3.3",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.8",
         "datatables.net": "^1.13.11",
         "datatables.net-bs4": "^1.11.5",
         "datatables.net-bs5": "^2.3.3",
         "datatables.net-buttons-bs5": "^3.2.4",
         "datatables.net-responsive-bs5": "^3.0.6",
         "jquery-ui": "^1.14.0",
+        "laravel-mix": "^6.0.49",
         "sweetalert2": "^11.6.13",
         "toastr": "^2.1.4"
     }
